--- a/template.html
+++ b/template.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title><!-- Page Title --></title>
+  <title></title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" />
   <link rel="stylesheet" href="css/styles.css" />
@@ -29,9 +29,7 @@
     </div>
   </nav>
 
-  <!-- PAGE CONTENT -->
   <main>
-    <!-- replace with page-specific content -->
   </main>
 
   <!-- FOOTER -->
